# BiblePlanCreater

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
include/Bible/: ChapterAndVerse.h  ReadBookStatsFile.h  ReadStatsFile.h  VersesPerDay.h
src/: BibleStats.csv  BookStats.csv  CMakeLists.txt  main.cpp
